Finilize the APP before entering to cloud. Added postman file
